data/derived/comb/progs/unify/prog7447.ml.out
Characters 182-214:
  | Average (e1, e2) -> float((eval (e1,x,y) +. eval (e2,x,y))/2)
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
